wrote more js scripts, but most was done offline

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <img src="data:," alt="Alternative Text">
             </div>
             <div class="stats">
-                <button type="button" class="btn btn-success">Start</button>
+                <button id="startbutton" type="button" class="btn btn-success">Start</button>
                 <h3 id="wins">Wins:</h3>
                 <h3 id="wins#"></h3>
                 <h3 id="curWord">Current Word: </h3>
-                <h3 id="curWord#"></h3>
+                <h3 id="curWord1"></h3>
                 <h3 id="numgues">Number of Guesses Remaining</h3>
                 <h3 id="numguess#"></h3>
                 <h3 id="lettersguessed"></h3>
